engine-net-2/examples/Errors/SubgraphTypeError.grs
new graph "Rules.grg"

exec i:int=42 ;> i.r(null)

quit
